--- a/Views/Libro/Index.cshtml
+++ b/Views/Libro/Index.cshtml
@@ -161,17 +161,40 @@
                                                     <i class="fas fa-barcode me-2 text-muted small"></i>
                                                     <small class="text-muted">@libro.ISBN</small>
                                                 </div>
+
+
                                                 <div class="d-flex align-items-center mb-1">
                                                     <i class="fas fa-user-edit me-2 text-muted small"></i>
-                                                    <small>@libro.Autor</small>
+                                                    @if (libro.Autor != null && libro.Autor.Any())
+                                                    {
+                                                        <small>@string.Join(", ", libro.Autor)</small>
+                                                    }
+                                                    else
+                                                    {
+                                                        <small class="text-muted">Sin autor</small>
+                                                    }
                                                 </div>
+
+
+
+
                                                 <div class="d-flex align-items-center mb-1">
                                                     <i class="fas fa-building me-2 text-muted small"></i>
                                                     <small>@libro.Editorial</small>
                                                 </div>
+
+
                                                 <div class="d-flex align-items-center mb-2">
                                                     <i class="fas fa-tag me-2 text-muted small"></i>
-                                                    <small>@libro.Genero</small>
+                                                    @if (libro.Genero != null && libro.Genero.Any())
+                                                    {
+                                                    <small>@string.Join(", ",libro.Genero)</small>
+
+                                                    }
+                                                    else
+                                                    {
+                                                        <small class="text-muted"> Sin genero</small>
+                                                    }
                                                 </div>
                                             </div>
 
