Corrección de errores.

--- a/Views/Libro/Index.cshtml
+++ b/Views/Libro/Index.cshtml
@@ -335,7 +335,7 @@
                                     <label for="ISBN" class="form-label-libros">
                                         <i class="fas fa-barcode"></i> ISBN
                                     </label>
-                                    <input type="text" id="ISBN" name="ISBN" class="form-control form-control-libros" placeholder="Ingrese el ISBN">
+                                    <input type="text" id="ISBN" name="ISBN" class="form-control form-control-libros" placeholder="Ingrese el ISBN" required>
                                 </div>
                             </div>
 
