--- a/Views/Usuario/PerfilUsuario.cshtml
+++ b/Views/Usuario/PerfilUsuario.cshtml
@@ -163,7 +163,7 @@
                             <button type="submit" class="btn btn-perfil-primary">
                                 <i class="fas fa-save me-1"></i>Guardar Cambios
                             </button>
-                            <a href="@Url.Action("Index", "Usuario")" class="btn btn-perfil-secondary">
+                            <a href="@Url.Action("PerfilUsuario", "Usuario")" class="btn btn-perfil-secondary">
                                 <i class="fas fa-undo me-1"></i>Cancelar
                             </a>
                         </div>
